[gd_scene load_steps=22 format=3 uid="uid://5vb67f102yuj"]

[ext_resource type="Script" path="res://Enemies/frog.gd" id="1_ie77v"]
[ext_resource type="PackedScene" uid="uid://56hr14fse4ql" path="res://Components/HealthComponent.tscn" id="1_qtf7h"]
[ext_resource type="Texture2D" uid="uid://dprpft6nnej2k" path="res://Assets/Characters/Enemies and NPC/frog/Sprites/jump/frog-jump-2.png" id="1_rosqj"]
[ext_resource type="Texture2D" uid="uid://bdcsxepy634vv" path="res://Assets/Characters/Enemies and NPC/frog/Sprites/idle/frog-idle-1.png" id="2_ldudg"]
[ext_resource type="Texture2D" uid="uid://bpd1jstei7nbp" path="res://Assets/Props Items and VFX/enemy-death 2/Sprites/enemy-death-1.png" id="3_ffan5"]
[ext_resource type="Texture2D" uid="uid://c4nxhqy3exhm7" path="res://Assets/Characters/Enemies and NPC/frog/Sprites/idle/frog-idle-2.png" id="3_n43k2"]
[ext_resource type="Texture2D" uid="uid://d30pdl8xj83b2" path="res://Assets/Props Items and VFX/enemy-death 2/Sprites/enemy-death-2.png" id="4_cji0r"]
[ext_resource type="Texture2D" uid="uid://bdsahx4fd87b" path="res://Assets/Characters/Enemies and NPC/frog/Sprites/idle/frog-idle-3.png" id="4_efkyy"]
[ext_resource type="Texture2D" uid="uid://be54x5vgf8fmf" path="res://Assets/Characters/Enemies and NPC/frog/Sprites/idle/frog-idle-4.png" id="5_au6t2"]
[ext_resource type="Texture2D" uid="uid://bo3afe713uaws" path="res://Assets/Props Items and VFX/enemy-death 2/Sprites/enemy-death-3.png" id="5_blej4"]
[ext_resource type="Texture2D" uid="uid://do6lvp7qkcbyx" path="res://Assets/Characters/Enemies and NPC/frog/Sprites/jump/frog-jump-1.png" id="6_lgtpt"]
[ext_resource type="Texture2D" uid="uid://og8y0q1rta77" path="res://Assets/Props Items and VFX/enemy-death 2/Sprites/enemy-death-4.png" id="6_w06e7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ughe1"]
size = Vector2(20, 17)

[sub_resource type="SpriteFrames" id="SpriteFrames_grkvl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ffan5")
}, {
"duration": 1.0,
"texture": ExtResource("4_cji0r")
}, {
"duration": 1.0,
"texture": ExtResource("5_blej4")
}, {
"duration": 1.0,
"texture": ExtResource("6_w06e7")
}],
"loop": true,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rosqj")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ldudg")
}, {
"duration": 1.0,
"texture": ExtResource("3_n43k2")
}, {
"duration": 1.0,
"texture": ExtResource("4_efkyy")
}, {
"duration": 1.0,
"texture": ExtResource("5_au6t2")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_lgtpt")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_4jio5"]
resource_name = "Die"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Die"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.6, 1.6)]
}

[sub_resource type="Animation" id="Animation_mqr5k"]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Fall"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6c6up"]
resource_name = "Idle"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ex3lr"]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gfsd1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w7jxc"]
_data = {
"Die": SubResource("Animation_4jio5"),
"Fall": SubResource("Animation_mqr5k"),
"Idle": SubResource("Animation_6c6up"),
"Jump": SubResource("Animation_ex3lr"),
"RESET": SubResource("Animation_gfsd1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjqcf"]
size = Vector2(24, 18)

[node name="Frog" type="CharacterBody2D" groups=["Enemies"]]
collision_layer = 2
collision_mask = 16
slide_on_ceiling = false
script = ExtResource("1_ie77v")

[node name="HealthComponent" parent="." instance=ExtResource("1_qtf7h")]

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ughe1")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -2)
sprite_frames = SubResource("SpriteFrames_grkvl")
animation = &"Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w7jxc")
}

[node name="DealDamageArea" type="Area2D" parent="."]
collision_layer = 0

[node name="DealDamageHitbox" type="CollisionShape2D" parent="DealDamageArea"]
shape = SubResource("RectangleShape2D_rjqcf")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="DealDamageArea" to="." method="_on_deal_damage_area_area_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
